; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_hpilo.c_fifo_check_recv.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_hpilo.c_fifo_check_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ilo_hwinfo = type { i32 }
%struct.fifo = type { i32*, i64, i64 }

@ENTRY_MASK_C = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ilo_hwinfo*, i8*)* @fifo_check_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fifo_check_recv(%struct.ilo_hwinfo* %0, i8* %1) #0 {
  %3 = alloca %struct.ilo_hwinfo*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.fifo*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ilo_hwinfo* %0, %struct.ilo_hwinfo** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call %struct.fifo* @FIFOBARTOHANDLE(i8* %9)
  store %struct.fifo* %10, %struct.fifo** %5, align 8
  store i32 0, i32* %7, align 4
  %11 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %3, align 8
  %12 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %11, i32 0, i32 0
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @spin_lock_irqsave(i32* %12, i64 %13)
  %15 = load %struct.fifo*, %struct.fifo** %5, align 8
  %16 = getelementptr inbounds %struct.fifo, %struct.fifo* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load %struct.fifo*, %struct.fifo** %5, align 8
  %19 = getelementptr inbounds %struct.fifo, %struct.fifo* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.fifo*, %struct.fifo** %5, align 8
  %22 = getelementptr inbounds %struct.fifo, %struct.fifo* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = and i64 %20, %23
  %25 = getelementptr inbounds i32, i32* %17, i64 %24
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* @ENTRY_MASK_C, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %2
  store i32 1, i32* %7, align 4
  br label %32

32:                                               ; preds = %31, %2
  %33 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %3, align 8
  %34 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %33, i32 0, i32 0
  %35 = load i64, i64* %6, align 8
  %36 = call i32 @spin_unlock_irqrestore(i32* %34, i64 %35)
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local %struct.fifo* @FIFOBARTOHANDLE(i8*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
